newtab.js: minimize; help_dialog.html: remove useless id; blank.html: add "Vimium" into its title; index.html: make some tags meet HTML standard; vimium.css: remove -webkit-scrollbar-button; completion.js: fix a bug of assigning undefined to bookmarkCompleter.currentSearch.*

--- a/content_scripts/vimium.css
+++ b/content_scripts/vimium.css
@@ -304,10 +304,11 @@
   z-index: 99999999;
 }
 
+/* Vimium Scrollbar */
+
 .vimiumScroll::-webkit-scrollbar,
 .vimiumScroll::-webkit-scrollbar-track,
-.vimiumScroll::-webkit-scrollbar-thumb,
-.vimiumScroll::-webkit-scrollbar-button {
+.vimiumScroll::-webkit-scrollbar-thumb {
   background: none;
   border: none;
   border-radius: 5px;
@@ -319,17 +320,11 @@
 .vimiumScroll::-webkit-scrollbar:horizontal {
   height: 10px;
 }
-.vimiumScroll::-webkit-scrollbar-button {
-  height: 10px;
-  width: 10px;
-}
 .vimiumScroll::-webkit-scrollbar-thumb,
 .vimiumScroll::-webkit-scrollbar-thumb:window-inactive,
-.vimiumScroll::-webkit-scrollbar-track:hover,
-.vimiumScroll::-webkit-scrollbar-button {
+.vimiumScroll::-webkit-scrollbar-track:hover {
   background: rgba(96, 96, 96, 0.4);
 }
-.vimiumScroll::-webkit-scrollbar-thumb:hover,
-.vimiumScroll::-webkit-scrollbar-button:hover {
+.vimiumScroll::-webkit-scrollbar-thumb:hover {
   background: rgba(0, 0, 0, 0.6);
 }
